[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "twitter-cleaner"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.43",
    "click>=8.1",
    "rich>=13.0",
    "pyotp>=2.9",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-playwright>=0.4",
]

[project.scripts]
twitter-cleaner = "twitter_cleaner.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
