[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "twtr-cleaner"
version = "0.1.0"
description = "Delete your Twitter/X history — tweets, replies, retweets, and likes — using your archive. No API key required."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Manu" }]
requires-python = ">=3.11"
keywords = ["twitter", "x", "cleanup", "delete", "history", "playwright"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Utilities",
]
dependencies = [
    "playwright>=1.43",
    "click>=8.1",
    "rich>=13.0",
    "pyotp>=2.9",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-playwright>=0.4",
]

[project.urls]
Homepage = "https://github.com/mikelord007/twitter-cleaner"
Repository = "https://github.com/mikelord007/twitter-cleaner"
Issues = "https://github.com/mikelord007/twitter-cleaner/issues"

[project.scripts]
twtr-cleaner = "twitter_cleaner.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["twitter_cleaner"]

[tool.hatch.build.targets.sdist]
exclude = [
    "data/",
    "web/",
    ".env",
    ".twitter_cleaner/",
    "install.py",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
